Got diagram history on the left
Work in progress...

--- a/web/1.css
+++ b/web/1.css
@@ -58,13 +58,13 @@ body {
     height: 100%;
 }
 
-div.image {
+div.historyEntry {
     margin-top: 1em;
     margin-bottom: 1em;
     text-align: center;
 }
 
-div.image img {
+div.historyEntry img {
     cursor: pointer;
 }
 
