--- a/src/main/webapp/1.css
+++ b/src/main/webapp/1.css
@@ -76,6 +76,37 @@ div.diagramEntry img {
     overflow: auto;2
 }
 
+div.historyEntry {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    text-align: center;
+    cursor: pointer;
+}
+
+div.historyEntry img {
+    cursor: pointer;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .3s ease;
+  background: rgb(0, 0, 0) transparent;
+  color: red;
+  align: right;
+  font-size: 20pt;
+}
+
+div.historyEntry:hover .overlay {
+  opacity: 1;
+}
+
 #samples0 {
     position: absolute;
     right: 132;
