--- a/src/main/webapp/1.css
+++ b/src/main/webapp/1.css
@@ -80,6 +80,7 @@ div.historyEntry {
   position: relative;
   margin-top: 1em;
   margin-bottom: 1em;
+  margin-left: 1em;
   text-align: center;
   cursor: pointer;
 }
